# pytestomatio

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  metadata.json  pyproject.toml  pytest.ini  setup.py_  smoke.py
.github/workflow/: publish-to-pypi.yml
.github/workflows/: main.yml  python-publish.yml  tests.yml
analyzer/: analyzer.py  connector.py  decorator_updater.py  helper.py  s3_connector.py  testItem.py  testRunConfig.py  testomat_item.py  testomatio.py
analyzer/testomatio/: __init__.py  code_collector.py  connector.py  decorator_updater.py  helper.py  testomat_test.py
examples/: example_test_class_root.py  example_test_cli_param_test_id.py  example_test_cli_params.py  example_test_decorators.py  example_test_parameters.py  example_test_root.py
examples/sub/: example_test_class_sub.py  example_test_sub.py
examples/sub/sub_mob/: example_sub_sub_class_test.py  example_sub_sub_test.py
pytestomatio/: code_collector.py  connector.py  decorator_updater.py  functions.py  helper.py  main.py  testItem.py  testRunConfig.py  testomatio.py  worker_sync.py
pytestomatio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pytestomatio/connect/: connector.py  exception.py  s3_connector.py
pytestomatio/decor/: decorator_updater.py  default.py  pep8.py
pytestomatio/services/: artifact_storage.py  base_storage.py  link_storage.py  meta_storage.py  run_artifact_storage.py
pytestomatio/testing/: code_collector.py  testItem.py
pytestomatio/testomatio/: filter_plugin.py  testRunConfig.py  testomatio.py
pytestomatio/utils/: constants.py  helper.py  logging.py  parser_setup.py  steps.py  validations.py  worker_sync.py
tests/: conftest.py  test_class_root.py  test_cli_param_test_id.py  test_cli_params.py  test_decorators.py  test_filter_plugin.py  test_main.py  test_parameters.py  test_root.py  test_sync.py  test_xdist.py
tests/sub/: test_class_sub.py  test_sub.py
tests/sub/sub_mob/: sub_sub_class_test.py  sub_sub_test.py
tests/test_connect/: test_connector.py  test_s3_connector.py
tests/test_decor/: test_decorator_updater.py  test_default.py  test_pep8.py
tests/test_services/: test_artifact_storage.py  test_link_storage.py  test_meta_storage.py  test_run_artifact_storage.py
tests/test_testing/: test_TestItem.py  test_code_collector.py
tests/test_testomatio/: test_filter_plugin.py  test_testRunConfig.py  test_testomatio.py
tests/test_utils/: test_helper.py  test_logging.py  test_parser_setup.py  test_steps.py  test_validations.py
