[build-system]
requires = ["setuptools>=65.5.1", "requests>=2.29.0", "pytest<8.0.0,>=7.3.1", "boto3>=1.28.28", "libcst==1.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [".github", "tests"]

[project]
name = "pytestomatio"
version = "2.1.0"

dependencies = [
    "requests>=2.29.0",
    "pytest<8.0.0,>=7.3.1",
    "boto3>=1.28.28",
    "libcst==1.1.0"]

authors = [
    { name = "Oleksii Ostapov" },
    { name = "TikoQA" },
]
description = "Pytest plugin to sync test with testomat.io"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Testomat.io" = "https://testomat.io/"
"Homepage" = "https://github.com/tikolakin/pytestomatio"
"Bug Tracker" = "https://github.com/tikolakin/pytestomatio/issues"

[project.entry-points.pytest11]
pytestomatio = "pytestomatio.main"