[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [".github", "tests", "build", "dist", ".venv", "pytestomatio.egg-info", ".env", ".gitignore", "CHANGELOG.md"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = false
[project]
name = "pytestomatio"
version = "2.8.2.dev35"

dependencies = [
    "requests>=2.29.0",
    "pytest>7.2.0",
    "boto3>=1.28.28",
    "libcst==1.1.0",
    "commitizen>=3.29.0",
    "autopep8>=2.1.0"
]

authors = [
    { name = "Oleksii Ostapov" },
    { name = "TikoQA" },
]
description = "Pytest plugin to sync test with testomat.io"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Testomat.io" = "https://testomat.io/"
"Homepage" = "https://github.com/testomatio/pytestomatio"
"Bug Tracker" = "https://github.com/testomatio/pytestomatio/issues"

[project.entry-points.pytest11]
pytestomatio = "pytestomatio.main"