[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [".github", "tests*", "examples*", "build", "dist", ".venv", 'venv*', "pytestomatio.egg-info", ".env", ".gitignore", "CHANGELOG.md"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = false
[project]
name = "pytestomatio"
version = "2.10.2b6"


dependencies = [
    "requests>=2.32.4",
    "pytest>=8.4.1",
    "boto3>=1.35.0",
    "libcst>=1.4.0",
    "commitizen>=4.8.3",
    "autopep8>=2.3.2"
]

authors = [
    { name = "Oleksii Ostapov" },
    { name = "TikoQA" },
]
description = "Pytest plugin to sync test with testomat.io"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Testomat.io" = "https://testomat.io/"
"Homepage" = "https://github.com/testomatio/pytestomatio"
"Bug Tracker" = "https://github.com/testomatio/pytestomatio/issues"

[project.entry-points.pytest11]
pytestomatio = "pytestomatio.main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-testdox>=3.1.0",
    "pytest-xdist>=3.6.0",
    "python-dotenv>=1.0.1",
    "toml>=0.10.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: indicates smoke tests"
]
addopts = "-p pytester"
